# silver-brain

./: .gitignore  CLAUDE.md  Creating SSH key pairs.md  Forcing wordpres url.md  Linux CLI commands for directories and files.md  Obsidian Tags vs Wiki Links.md  README.md  Recursion.md  SQL Case (Switch statements).md  SQL Chek for NULL.md  SSH.md  Searching within a files in a Linux-Unix systems.md  Sets.md  Side Effects.md  Thoughts on Code Documentation.md  Troubleshooting Linux new installations userData.md  bash.md  ternary.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  (+2 more)
Old Notes to Sort Through and format/From Northcoders Bootcamp/: main.py  pyproject.toml  readme.md  sprints_index.md
Old Notes to Sort Through and format/From Northcoders Bootcamp/de-fundamentals/2025-04-14 - Day 21 | SQL/: 2025-04-14 - Notes | SQL.md  2025-04-14.ipynb
Old Notes to Sort Through and format/From Northcoders Bootcamp/de-fundamentals/2025-04-15 - Day 22 | SQL 2/: 2025-04-14 - Notes | SQL 2.md
Old Notes to Sort Through and format/From Northcoders Bootcamp/de-fundamentals/2025-04-16 - Day 23 | Internet Requests/: 2025-04-16 - Notes | Internet Requests.md  2025-04-16 - TestGround.ipynb
Old Notes to Sort Through and format/From Northcoders Bootcamp/other-notes/: AWS CLI - REF.md  CLI - REF.md  FastAPI - REF.md  Git Workflow.md  PG8000.md  Pandas.ipynb  Pytest - REF.md  Python - File Handling.md  Python Logging.md  SQL.md  testing-notes.md  uv -REF.md
Old Notes to Sort Through and format/From Northcoders Bootcamp/test_ground/: test_ground.ipynb
(+244 files in other folders)
